# StudIQ

./: .gitignore  README.md  lms schemas.docx
backend/: main.py  package-lock.json  package.json  pyproject.toml  server.js
backend/config/: db.js
backend/controllers/: adminController.js  announcementController.js  attendanceController.js  calendarController.js  courseController.js  lectureController.js  userController.js
backend/middlewares/: auth.js
backend/models/: Announcement.js  Attendance.js  Calendar.js  Course.js  CourseMaterial.js  Enrollment.js  StudentDetail.js  TeacherDetail.js  User.js  index.js
backend/routes/: adminRoutes.js  announcementRoutes.js  attendanceRoutes.js  calendarRoutes.js  chat.py  courseRoutes.js  lectureRoutes.js  userRoutes.js
backend/services/: RAG.py  langchain_chat.py
backend/uploads/: 1751541162571-55397547-EX 13.docx  1751543612699-733184039-CS 2803.docx  1751543621977-581397191-Document1.docx
backend/vectorstore/1/: index.faiss  index.pkl
backend/vectorstore/string/: index.pkl
backend/views/google/: sendToken.html
client/: package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.jsx  index.js
client/src/assets/: assets.jsx
client/src/components/: Announcements.jsx  Attendance.jsx  AuthForm.jsx  CalendarWidget.jsx  ChatWithAIButton.jsx  Features.jsx  General.jsx  GoogleLoginButton.jsx  Header.jsx  LectureSlides.jsx  Lectures.jsx  Login.jsx  MainHeader.jsx  MyCourses.jsx  Navbar.jsx  OutlookMessages.jsx  PasswordField.jsx  PerformanceChart.jsx  PostAnnouncement.jsx  (+1 more)
(+11 files in other folders)
