[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "pypdf>=5.7.0",
    "sentence-transformers>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]
